--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,8 @@
       
       @@include('html/components/intro.html')
       @@include('html/components/s-about.html')
+      @@include('html/components/s-services.html')
+      @@include('html/components/s-quiz.html')
 
     </main>
     @@include('html/components/footer.html')
