--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
       @@include('html/components/s-about.html')
       @@include('html/components/s-services.html')
       @@include('html/components/s-quiz.html')
+      @@include('html/components/s-res.html')
 
     </main>
     @@include('html/components/footer.html')
