--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,11 @@
       @@include('html/components/s-services.html')
       @@include('html/components/s-quiz.html')
       @@include('html/components/s-res.html')
+      @@include('html/components/s-steps.html')
+      @@include('html/components/s-gallery.html')
+      @@include('html/components/s-team.html')
+      @@include('html/components/s-connect.html')
+      @@include('html/components/s-social.html')
 
     </main>
     @@include('html/components/footer.html')
